--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,14 +3,13 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": {}
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "*",
-      "dest": "index.js"
+      "src": "/(.*)",
+      "dest": "/index.js"
     }
   ]
 }
