--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,6 +10,11 @@
     {
       "src": "/(.*)",
       "dest": "index.js",
+      "headers": {
+  "Access-Control-Allow-Origin": "https://mern-resturant-application1-git-master-shaurya-deeps-projects.vercel.app",
+  "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
+  "Access-Control-Allow-Headers": "Content-Type, Accept, Accept-Language, Accept-Encoding"
+}
      
     }
   ]
