--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,7 +11,7 @@
       "src": "/(.*)",
       "dest": "index.js",
       "headers": {
-  "Access-Control-Allow-Origin": "https://mern-resturant-application1-git-master-shaurya-deeps-projects.vercel.app",
+  "Access-Control-Allow-Origin": "*",
   "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
   "Access-Control-Allow-Headers": "Content-Type, Accept, Accept-Language, Accept-Encoding"
 }
