--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,12 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "headers": {
-  "Access-Control-Allow-Origin": "*",
-  "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-  "Access-Control-Allow-Headers": "Content-Type, Accept, Accept-Language, Accept-Encoding"
-}
+      "dest": "index.js"
+     
      
     }
   ]
