--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,8 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js"
-     
+      "dest": "index.js",
+      "Access-Allow-Control-Origin":"*"
      
     }
   ]
