--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,12 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
-        "Access-Control-Allow-Headers": "Content-Type, Accept, Accept-Language, Accept-Encoding"
-      }
+      "dest": "index.js"
     }
   ]
 }
