--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,9 +12,15 @@
       "dest": "index.js"
     }
   ],
-  "cors": {
-    "origin": ["https://mern-resturant-application1.vercel.app"],
-    "methods": ["GET", "POST", "PUT", "DELETE"],
-    "headers": ["Content-Type", "Authorization"]
-  }
+ "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
+    }
+  ]
 }
