--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,7 +14,7 @@
   ],
  "headers": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "https://mern-resturant-application1-git-master-shaurya-deeps-projects.vercel.app" },
