--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,14 +7,14 @@
     } 
   ],
   "routes": [
-    {
+    { 
       "src": "/(.*)",
       "dest": "index.js"
     }
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/api/(*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
