--- a/server/vercel.json
+++ b/server/vercel.json
@@ -18,7 +18,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://mern-resturant-application1-git-master-shaurya-deeps-projects.vercel.app"
+          "value": "{{VERCEL_URL}}"
         },
         {
           "key": "Access-Control-Allow-Credentials",
@@ -30,7 +30,7 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
         }
       ]
     }
